# litestar-hexagonal-architecture-example

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
travelexhibition/: .env  __init__.py  alembic.ini  config.py  ioc.py  main.py
travelexhibition/adapters/primary/api/: api_v1_router.py  controllers.py  schemas.py
travelexhibition/adapters/secondary/: brokers.py  event_bus.py  exceptions.py  mappers.py
travelexhibition/adapters/secondary/database/: models.py  repositories.py  sessions.py  uow.py
travelexhibition/adapters/secondary/database/migrations/: env.py
travelexhibition/adapters/secondary/database/migrations/versions/: 0d1e8497e173_create_artifact_table.py
travelexhibition/core/: dtos.py  events.py  exceptions.py  models.py  services.py
travelexhibition/ports/: artifact_ports.py  broker_ports.py  event_bus.py  uow_ports.py
travelexhibition/setup/: app_factory.py  config.py  ioc.py  logging.py
travelexhibition/tests/: conftest.py
